--- a/environment.yml
+++ b/environment.yml
@@ -2,22 +2,11 @@ name: jump-scope-analysis
 channels:
 - conda-forge
 dependencies:
-- conda-forge::python=3.8.5
-- conda-forge::pandas=1.2.4
-- conda-forge::numpy=1.19.2
-- conda-forge::pathlib=1.0.1
-- conda-forge::jupyter=1.0.0
-- conda-forge::ipykernel=5.3.4
-- conda-forge::tabulate=0.8.7
-- conda-forge::scipy=1.5.2
-- conda-forge::seaborn=0.11.0
-- conda-forge::matplotlib=3.3.2
-- conda-forge::kneed=0.7.0
-- conda-forge::xlrd==1.2.0
-- conda-forge::plotly=4.14.3
-- conda-forge::umap-learn=0.5.2
-- plotly::python-kaleido=0.0.3
+- python=3.8
 - pip
 - pip:
+  - numpy=1.22.4
+  - pandas=1.4.2
+  - matplotlib=3.5.2
   - git+https://github.com/cytomining/pycytominer@36241269c4293c24484986568ca16b2d7eb9e808
   - git+https://github.com/cytomining/cytominer-eval@3c907eaa56a607043a1cb19e0a4d700c79e47c7e
