--- a/evalzoo/within_matches.yml
+++ b/evalzoo/within_matches.yml
@@ -1,64 +1,61 @@
-# For within replicates
 knit_output_format: github_document
 experiment:
-  data_path: "/input/Scope1_Nikon_10X"
-  input_structure: "{data_path}/{{plate}}/{{plate}}_normalized_feature_select_negcon_batch.{extension}"
+  data_path: /input/profiles/Scope1_Nikon_20X
+  input_structure: '{data_path}/{{plate}}/{{plate}}_normalized_feature_select_negcon_batch.{extension}'
   extension: csv.gz
   plates:
-    - BR00117060a10x
+  - BR00117061a
+  - BR00117062a
+  - BR00117063b
   external_metadata:
-    file: "/input/JUMP-MOA_compound_metadata.tsv"
+    file: /input/JUMP-MOA_compound_metadata.tsv
     include_cols:
-      - Metadata_pert_iname
-      - Metadata_moa
+    - Metadata_pert_iname
+    - Metadata_moa
     join_cols:
       Metadata_pert_iname: Metadata_pert_iname
-  add_dummy_metadata_column: TRUE
+  add_dummy_metadata_column: true
   split_by_column:
-    split_column: Metadata_moa
-    element_column: Metadata_pert_iname
-    compact_splits: TRUE
   significance_threshold: 0.05
   parallel_workers: 8
   aggregate_by:
-    - Metadata_pert_iname
-    - Metadata_pert_type
-  filter_by:
+  - Metadata_pert_iname
+  - Metadata_Plate
+  - Metadata_pert_type
+  filter_by: null
   reference_set:
     Metadata_pert_type:
-      - control
+    - control
   random_seed: 42
   background_type: non_rep
-  shuffle: FALSE
-  shuffle_bad_groups_threshold: # 0.1
-  shuffle_group:
-  shuffle_strata:
-  shuffle_exclude:
+  shuffle: false
+  shuffle_bad_groups_threshold: null
+  shuffle_group: null
+  shuffle_strata: null
+  shuffle_exclude: null
   subsample_fraction: 1
-  subsample_pert_strata:
-  subsample_reference_strata:
+  subsample_pert_strata: null
+  subsample_reference_strata: null
   similarity_method: cosine
   sim_params:
     reference:
-        Metadata_reference_or_other:
-          reference
-    all_same_cols_ref:
+      Metadata_reference_or_other: reference
+    all_same_cols_ref: null
     all_same_cols_rep:
-      - Metadata_moa_split_compact
-      - Metadata_reference_or_other # always there
-    all_different_cols_rep: NULL
-    any_different_cols_rep: NULL
-    all_same_cols_rep_ref: NULL
+    - Metadata_moa
+    - Metadata_reference_or_other
+    all_different_cols_rep: null
+    any_different_cols_rep: null
+    all_same_cols_rep_ref: null
     any_different_cols_non_rep:
-      - Metadata_moa_split_compact
+    - Metadata_moa
     all_same_cols_non_rep:
-      - Metadata_dummy
+    - Metadata_dummy
     all_different_cols_non_rep:
-      - Metadata_pert_iname
-      - Metadata_moa_split_compact
-    all_same_cols_group: NULL
-    any_different_cols_group: NULL
+    - Metadata_moa
+    all_same_cols_group: null
+    any_different_cols_group: null
     annotation_cols:
-      - Metadata_moa_split_compact
-      - Metadata_pert_iname
-      - Metadata_reference_or_other
+    - Metadata_Plate
+    - Metadata_moa
+    - Metadata_reference_or_other
